Still fixing spacing issue in landscape - moved bg colour to body

--- a/style.scss
+++ b/style.scss
@@ -41,12 +41,6 @@
 	}
 }
 
-html,
-body {
-	width: 100vw;
-	overflow-x: hidden;
-}
-
 html {
 	@extend %unpad;
 }
@@ -54,6 +48,13 @@ html {
 body {
 	@extend %unpad;
 	@extend %use-roboto-m;
+
+	// Background gradient
+	background-image: linear-gradient(
+		palette.$lightest 5%,
+		palette.$deeper,
+		palette.$deepest
+	);
 }
 
 footer {
@@ -133,13 +134,6 @@ a {
 }
 
 .content {
-	// Background gradient
-	background-image: linear-gradient(
-		palette.$lightest 5%,
-		palette.$deeper,
-		palette.$deepest
-	);
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
